# python-project-lvl2

./: .codeclimate.yml  .coverage  .gitignore  .travis.yml  Makefile  README.md  Readme.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: CI.yml  python-package.yml
gendiff/: __init__.py  before.json  cli.py  constants.py  diff.py  diif.py  example.py  files.py  generate_diff.py  nodes.py  reader.py
gendiff/for_experiment/: after1.json  experiment.py  rekurs.py
gendiff/format/: __init__.py  default.py  mapping.py  plain.py
gendiff/parsers/: __init__.py  gendiff.py  parser.py
gendiff/scripts/: gendiff.py  generate_diff.py
gendiff/src/: generate_diff.py
gendiff/tests/: expected.py  test_gendiff.py
gendiff/tests/fixtures/: after_inserted.json  test_gendiff.py
tests/: .test_parser.py.swp  test_format.py  test_gendiff.py  test_generate_diff.py  test_mapping.py  test_mkast.py  test_parser.py
tests/fixtures/: expected.py  flat_out_json.json  nested_out_json.json
tests/fixtures/expectation/: expectation_flat_json.json
