[tool.poetry]
name = "Aleksey94dan-gendiff"
version = "0.2.0"
description = ""
authors = ["Aleksey Danilchenko <danilchenko.aleksey94@gmail.com>"]
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
